--- a/collective.html
+++ b/collective.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                        <a class="nav-link" href="services.html">Offerings</a>
+                        <a class="nav-link" href="services.html">Services</a>
                         <a class="nav-link" href="pricing.html">Pricing</a>
                         <a class="nav-link" href="collective.html">The Blooming Collective</a>
                         <a class="nav-link" href="mindful.html">The Mindful Bloom</a>
@@ -61,7 +61,7 @@
         </section>
     </main>
     <footer>
-        <p class="w-25 m-auto mb-3"><img src="images/Horizontal_web.png"></p>
+        <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co.</p>
         <p>Los Angeles | Orange County | San Bernadino County</p>
         <p>susan@bloomingtherapyco.com</p>
