--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="dark-bg">
-            <div class="row align-items-center w-75 mx-auto">
+            <div class="row align-items-center w-md-75 mx-auto">
                 <div class="col-md-8 pe-md-5 lora">
                     <p style="font-size: 1.5em;">“I started Blooming Therapy Co. to provide a nurturing environment for women in their 70’s, 80’s, 90’s, and beyond to blossom into their fullest potential.”</p>
                     <p class="mt-5">Susan Gilliam, LCSW<br>Owner and Founder<br>Blooming Therapy Co.</p>
@@ -48,22 +48,22 @@
             </div>
         </section>
         <section>
-            <h1 class=" text-center mb-5 pb-5">How to thrive and flourish, the Blooming Therapy way:</h1>
+            <h1 class=" text-center mb-md-5 pb-md-5">How to thrive and flourish, the Blooming Therapy way:</h1>
             <div class="grid-col-2">
                 <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5">Mindful Aging</h2>
+                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Mindful Aging</h2>
                     <p>By living in the present moment with awareness, acceptance and compassion, we can fully embrace each moment without judgment. We can develop tools to help us respond to stress, uncertainty, and change. And we can align our actions with our core values, leading to personal fulfillment, purpose, and a richer human experience.</p>
                 </div>
                 <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5">Creative Expression</h2>
+                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Creative Expression</h2>
                     <p>Through art therapy and other creative activities, we can stimulate both our right and left brain – empowering us to take control of our brain health, while exploring our truest self. We offer personalized creative activities during each session, for both experienced and blossoming artists. To show off your creations, you will be invited to submit your art to our online art gallery, <strong>The Bloom Collective</strong>.</p>
                 </div>
                 <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5">Storytelling</h2>
+                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Storytelling</h2>
                     <p>We combine the benefits of narrative therapy, reminiscence therapy, and talk therapy through our unique storytelling approach. Our proprietary therapy tool, <strong>Bloom Petals</strong>, was created for women like you to celebrate your wisdom and experiences.</p>
                 </div>
                 <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5">New Experiences</h2>
+                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">New Experiences</h2>
                     <p>To ignite a sense of fulfillment and connection to ourselves and the world around us, we will encourage you to explore opportunities for new experiences. Some potential benefits are personal satisfaction, cognitive stimulation, improved mood, self-confidence, social connections, and a sense of purpose.</p>
                 </div>
             </div>
@@ -71,16 +71,16 @@
         <section class="dark-bg">
             <div class="container">
                 <h1 class="text-center mb-5">Frequently Asked Questions</h1>
-                <h2 class="mb-3">Do you treat specific mental health diagnoses? </h2>
+                <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat specific mental health diagnoses? </h2>
                 <p>At Blooming Therapy Co., we are interested in your rich tapestry of life experiences. We do not focus solely on mental health diagnoses and symptoms. Many of our members do not require treatment for a specific mental health condition, but would like support with mindful aging. However, our therapists do specialize in addressing issues that disproportionately impact women over 70. Some examples are mood disorders (including post-menopausal mood changes), anxiety, substance use, grief and loss, and chronic pain.</p>
-                <h2 class="mt-5 mb-3">Do you treat women with early or middle stage dementia? </h2>
+                <h2 class="mt-5 mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat women with early or middle stage dementia? </h2>
                 <p>Yes, we are well-suited for this. We do require family or caregiver involvement as well as member consent. </p>
 
             </div>
         </section>
     </main>
     <footer>
-        <p class="w-25 m-auto mb-3"><img src="images/Horizontal_web.png"></p>
+        <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co.</p>
         <p>Los Angeles | Orange County | San Bernadino County</p>
         <p>susan@bloomingtherapyco.com</p>
