--- a/mindful.html
+++ b/mindful.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                        <a class="nav-link" href="services.html">Offerings</a>
+                        <a class="nav-link" href="services.html">Services</a>
                         <a class="nav-link" href="pricing.html">Pricing</a>
                         <a class="nav-link" href="collective.html">The Blooming Collective</a>
                         <a class="nav-link" href="mindful.html">The Mindful Bloom</a>
@@ -41,24 +41,21 @@
             <div class="container">
                 <p class="mb-5">This page will house your blog posts. Here is an example of what the "blogroll" (as Wordpress calls it) could look like:</p>
             </div>
-            <div class="grid-col-2 align-items-center mb-5">
-                <img src="https://picsum.photos/1000/600">
+            <div class="grid-col-2 align-items-center mb-5" style="grid-gap: 3em;">
+                <div class="featured-img"><img src="https://picsum.photos/1000/600"></div>
                 <div>
                     <h2>Blog post title</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla turpis odio, vehicula eu neque vel, bibendum iaculis orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.</p>
                     <p><a href="#">Read more</a></p>
                 </div>
-            </div>
-            <div class="grid-col-2 align-items-center mb-5">
-                <img src="https://picsum.photos/1000/600">
+           
+                <div class="featured-img"><img src="https://picsum.photos/1000/600"></div>
                 <div>
                     <h2>Blog post title</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla turpis odio, vehicula eu neque vel, bibendum iaculis orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.</p>
                     <p><a href="#">Read more</a></p>
                 </div>
-            </div>
-            <div class="grid-col-2 align-items-center mb-5">
-                <img src="https://picsum.photos/1000/600">
+                <div class="featured-img"><img src="https://picsum.photos/1000/600"></div>
                 <div>
                     <h2>Blog post title</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla turpis odio, vehicula eu neque vel, bibendum iaculis orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis.</p>
@@ -68,7 +65,7 @@
         </section>
     </main>
     <footer>
-        <p class="w-25 m-auto mb-3"><img src="images/Horizontal_web.png"></p>
+        <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co.</p>
         <p>Los Angeles | Orange County | San Bernadino County</p>
         <p>susan@bloomingtherapyco.com</p>
