--- a/pricing.html
+++ b/pricing.html
@@ -37,21 +37,18 @@
         </div>
     </header>
     <main>
-        <section class="dark-bg text-center">
-            <div class="container grid-col-2 align-items-center">
+        <section class="dark-bg">
+            <div class="container grid-col-3 align-items-center">
                 <h2>Cost of therapy sessions</h2>
-                <div>
-                    <p>In-home session: <strong>$280*</strong></p>
-                    <p>Virtual connection session: <strong>$50</strong></p>
-                </div>
+                    <p class="text-center"><strong style="font-size: 2em;line-height: 1;">$280</strong><br>In home session*</p>
+                    <p class="text-center"><strong style="font-size: 2em;line-height: 1;">$50</strong><br>Virtual connection session</p>
             </div>
-            <p class="text-center mt-5"><small>*An additional $25 mileage fee will be billed with each in home session</small></p>
         </section>
         <section>
-            <h2 class="mb-5 pb-5 text-center">Currently accepting members in the following cities:</h2>
+            <h2 class="mb-md-5 pb-md-5 text-center">Currently accepting members in the following cities:</h2>
             <div class="container grid-col-2">
                 <div class="card p-5 blush-bg">
-                    <h2 class="mb-5">San Diego County</h2>
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">San Diego County</h2>
                     <ul>
                         <li>Del Mar</li>
                         <li>Rancho Santa Fe</li>
@@ -63,7 +60,7 @@
                     </ul>
                 </div>
                 <div class="card p-5 blush-bg">
-                    <h2 class="mb-5">Riverside County</h2>
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Riverside County</h2>
                     <ul>
                         <li>Indian Wells</li>
                         <li>Rancho Mirage</li>
@@ -81,18 +78,19 @@
         </section>
         <section class="mountain-bg">
             <div class="container">
-                <h2>Forms of payment accepted</h2>
+                <h2><img src="images/Rose.png" class="w-10 me-3">Forms of payment accepted</h2>
                 <p>We accept Zelle, cash, check, and major credit cards.</p>
                 <p>Your therapist will provide you an invoice at the beginning of your session, for your records. Payment is collected at the beginning of your session.</p>
-                <h2 class="mt-5">Cancellation Policy</h2>
+                <h2 class="mt-5"><img src="images/Rose.png" class="w-10 me-3">Cancellation Policy</h2>
                 <p>Sessions canceled within 4 hours of your session and no shows will be charged the full fee. Sessions canceled within 24 hours, but more than 4 hours beforehand, will be charged 50% of the full fee. Exceptions may be made on a case by case basis, such as for unforeseen health emergencies.</p>
-                <h2 class="mt-5">Appointment reminders</h2>
+                <h2 class="mt-5"><img src="images/Rose.png" class="w-10 me-3">Appointment reminders</h2>
                 <p>Your therapist will explore if you would like appointment reminders in your welcoming session. We also offer appointment reminder cards, for your convenience.</p>
             </div>
         </section>
     </main>
+    <p class="text-center mt-5"><small>*An additional $25 mileage fee will be billed with each in home session</small></p>
     <footer>
-        <p class="w-25 m-auto mb-3"><img src="images/Horizontal_web.png"></p>
+        <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co.</p>
         <p>Los Angeles | Orange County | San Bernadino County</p>
         <p>susan@bloomingtherapyco.com</p>
