--- a/services.html
+++ b/services.html
@@ -40,20 +40,20 @@
         <section>
             <div class="grid-col-3">
                 <div class="card p-5 blush-bg">
-                    <h2 class="mb-5">Initial welcoming session</h2>
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Welcoming session</h2>
                     <p><strong>Session length:</strong> 60-75 minutes</p>
                     <p>Together, we will assess your well-being needs and preferences, and design a unique therapy program, just for you.</p>
                     <p>We will take our time reviewing consent, confidentiality, and our policies for an informed therapy experience.</p>
                 </div>
                 <div class="card p-5 blush-bg">
-                    <h2 class="mb-5">Blooming sessions</h2>
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Blooming sessions</h2>
                     <p><strong>Session length:</strong> 60-75 minutes</p>
                     <p>In home, 1:1 sessions, uniquely tailored to your well-being goals.</p>
                     <p>Our therapists provide structure to sessions, ensuring that you reap the benefits of mindful aging, creative expression, storytelling, and new experiences. You will do the rest!</p>
 
                 </div>
                 <div class="card p-5 blush-bg">
-                    <h2 class="mb-5">Connection sessions</h2>
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Connection sessions</h2>
                     <p><strong>Session length:</strong> 20-30 minutes (virtual only)</p>
                     <p>With your consent, your therapist can connect with the important people in your life (such as family, friends, spiritual mentors, and medical providers) to support you with your well-being goals. </p>
                 </div>
@@ -67,7 +67,7 @@
         </section>
     </main>
     <footer>
-        <p class="w-25 m-auto mb-3"><img src="images/Horizontal_web.png"></p>
+        <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co.</p>
         <p>Los Angeles | Orange County | San Bernadino County</p>
         <p>susan@bloomingtherapyco.com</p>
