--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <div class="masthead-sub">
             <div class="container">
                 <div class="content">
-                    <h1 class="m-0">About</h1>
+                    <h1 class="m-0">Contact us</h1>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
     <main>
         <section>
             <div class="container">
-                <p>I like to tell people this page answers the "who, what, when, where and why" of your business. There doesn't have to be a lot here, but most people are accustomed to seeing some content around the particulars of your business.</p>
+                <p>Content goes here</p>
             </div>
         </section>
     </main>
