--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
         <div class="masthead-sub">
             <div class="container">
                 <div class="content">
-                    <h1 class="m-0">About</h1>
+                    <h1 class="m-0">Frequently Asked Questions</h1>
                 </div>
             </div>
         </div>
@@ -41,7 +41,10 @@
     <main>
         <section>
             <div class="container">
-                <p>I like to tell people this page answers the "who, what, when, where and why" of your business. There doesn't have to be a lot here, but most people are accustomed to seeing some content around the particulars of your business.</p>
+                <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat specific mental health diagnoses? </h2>
+                <p>At Blooming Therapy Co., we are interested in your rich tapestry of life experiences. We do not focus solely on mental health diagnoses and symptoms. Many of our members do not require treatment for a specific mental health condition, but would like support with mindful aging. However, our therapists do specialize in addressing issues that disproportionately impact women over 70. Some examples are mood disorders (including post-menopausal mood changes), anxiety, substance use, grief and loss, and chronic pain.</p>
+                <h2 class="mt-5 mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat women with early or middle stage dementia? </h2>
+                <p>Yes, we are well-suited for this. We do require family or caregiver involvement as well as member consent. </p>
             </div>
         </section>
     </main>
