--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                        <a class="nav-link" href="services.html">Services</a>
-                        <a class="nav-link" href="pricing.html">Pricing</a>
-                        <a class="nav-link" href="collective.html">The Blooming Collective</a>
-                        <a class="nav-link" href="mindful.html">The Mindful Bloom</a>
+                        <a class="nav-link active" href="about.html">Our Story</a>
+                        <a class="nav-link" href="services.html">Offerings</a>
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                        <a class="nav-link" href="bloom-petals">Bloom Petals</a>
+                        <a class="nav-link" href="collective.html">Blooming Collective</a>
+                        <a class="nav-link" href="mindful.html">Our Blog</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -31,8 +33,11 @@
         <div class="masthead">
             <div class="container">
                 <div class="content">
-                    <h1 class="mb-5">Mindful Aging for Extraordinary Women.</h1>
-                    <p>Our members are incredible women like you. Caring. Accomplished. Smart. Capable. But the cognitive, physical, and emotional challenges that come with aging can take a toll. In a culture that places a high premium on youth, amazing women, like you, can feel unseen and devalued. As a specialized mental health company, we understand the complexities of the aging process, and are passionate about helping you live your best life.</p>
+                    <h1 class="mb-5">Let’s bloom together!</h1>
+                    <p>In home, specialized mental health services for extraordinary women over 70 in Southern California.</p>
+                    <p>We support women in their pursuit of personal growth, self-discovery, and improved well-being, without the limitations of a traditional therapy office setting or the limitations set by insurance companies.</p>
+                    <p>Therapy with Blooming Therapy Co. is professional, compassionate, and empowering. We provide a nurturing space for you to feel seen, heard, respected, and deeply valued.
+                    </p>
                 </div>
             </div>
         </div>
@@ -40,50 +45,40 @@
     <main>
         <section class="dark-bg">
             <div class="row align-items-center w-md-75 mx-auto">
-                <div class="col-md-8 pe-md-5 lora">
-                    <p style="font-size: 1.5em;">“I started Blooming Therapy Co. to provide a nurturing environment for women in their 70’s, 80’s, 90’s, and beyond to blossom into their fullest potential.”</p>
-                    <p class="mt-5">Susan Gilliam, LCSW<br>Owner and Founder<br>Blooming Therapy Co.</p>
+                <div class="col-md-8 pe-md-5">
+                    <p style="font-size: 1.5em;">“My greatest delight is hearing about our members’ rich life experiences, and how these experiences can contribute to their continued growth and development.”</p>
+                    <p class="mt-5">Susan Gilliam, LCSW<br>Blooming Therapy Co.</p>
                 </div>
                 <div class="col-md-4"><img src="images/susanpic.jpg"></div>
             </div>
         </section>
         <section>
-            <h1 class=" text-center mb-md-5 pb-md-5">How to thrive and flourish, the Blooming Therapy way:</h1>
-            <div class="grid-col-2">
-                <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Mindful Aging</h2>
-                    <p>By living in the present moment with awareness, acceptance and compassion, we can fully embrace each moment without judgment. We can develop tools to help us respond to stress, uncertainty, and change. And we can align our actions with our core values, leading to personal fulfillment, purpose, and a richer human experience.</p>
+            <h1 class=" text-center mb-md-5 pb-md-5">Our unique therapy model focuses on 4 key areas:</h1>
+            <div class="grid-col-2 text-center">
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Mindful Aging<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>We emphasize the importance of present-moment awareness, and promote an attitude of openness, curiosity, and acceptance towards our experiences, without judgment. We offer personalized mindful aging strategies and tools, for those who are interested. We are also eager to hear about any experiences you have had with mindfulness or spiritual practices!</p>
                 </div>
-                <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Creative Expression</h2>
-                    <p>Through art therapy and other creative activities, we can stimulate both our right and left brain – empowering us to take control of our brain health, while exploring our truest self. We offer personalized creative activities during each session, for both experienced and blossoming artists. To show off your creations, you will be invited to submit your art to our online art gallery, <strong>The Bloom Collective</strong>.</p>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Creative Expression<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>We promote neuroplasticity and brain health by incorporating therapeutic creative activities into sessions. We offer a library of options for you to choose from, which can be adapted to any skill level. If you have existing creative pursuits, or fresh ideas for our library, we want to hear about them!</p>
                 </div>
-                <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">Storytelling</h2>
-                    <p>We combine the benefits of narrative therapy, reminiscence therapy, and talk therapy through our unique storytelling approach. Our proprietary therapy tool, <strong>Bloom Petals</strong>, was created for women like you to celebrate your wisdom and experiences.</p>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Storytelling<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>Tell us your story! We believe that storytelling provides an opportunity for connection and support, even if you have not been open to therapy in the past. For those who appreciate direction and guidance, we offer our storytelling tool, <strong>Bloom Petals</strong>, with various topics to choose from. Bloom Petals are separated into 3 categories: Desert Bloom (resilience themed), City Bloom (reminiscence themed), and Sunset Bloom (wisdom themed). </p>
                 </div>
-                <div class="card p-5 mountain-bg">
-                    <h2 class="mb-5"><img src="images/Rose.png" class="w-10 me-3">New Experiences</h2>
-                    <p>To ignite a sense of fulfillment and connection to ourselves and the world around us, we will encourage you to explore opportunities for new experiences. Some potential benefits are personal satisfaction, cognitive stimulation, improved mood, self-confidence, social connections, and a sense of purpose.</p>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">New Experiences<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>We believe that new experiences are important, regardless of age or health status, to ignite a sense of fulfillment, pleasure, and connection to ourselves and the world around us. We create a space for you to explore opportunities and ideas for new experiences, if you are not already doing this on your own! In addition to a catalog of ideas, we offer art journal prompts, to help you reflect on your core values, intrinsic gifts, and deep interests.</p>
                 </div>
-            </div>
-        </section>
-        <section class="dark-bg">
-            <div class="container">
-                <h1 class="text-center mb-5">Frequently Asked Questions</h1>
-                <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat specific mental health diagnoses? </h2>
-                <p>At Blooming Therapy Co., we are interested in your rich tapestry of life experiences. We do not focus solely on mental health diagnoses and symptoms. Many of our members do not require treatment for a specific mental health condition, but would like support with mindful aging. However, our therapists do specialize in addressing issues that disproportionately impact women over 70. Some examples are mood disorders (including post-menopausal mood changes), anxiety, substance use, grief and loss, and chronic pain.</p>
-                <h2 class="mt-5 mb-3"><img src="images/Rose.png" class="w-10 me-3">Do you treat women with early or middle stage dementia? </h2>
-                <p>Yes, we are well-suited for this. We do require family or caregiver involvement as well as member consent. </p>
-
             </div>
         </section>
     </main>
     <footer>
         <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
-        <p>&copy; 2024 - Blooming Therapy Co.</p>
-        <p>Los Angeles | Orange County | San Bernadino County</p>
-        <p>susan@bloomingtherapyco.com</p>
+        <p>&copy; 2024 - Blooming Therapy Co., LLC</p>
+        <p>San Diego County | Riverside County | LA County | Orange County | San Bernadino County</p>
+        <p>Email me! susan@bloomingtherapyco.com</p>
         <p class="my-5" style="font-size: 0.8em;">Website design by <a href="mailto:dustinkrat@gmail.com">Dustin Kratochwill</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
