--- a/services.html
+++ b/services.html
@@ -19,11 +19,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                        <a class="nav-link" href="services.html">Services</a>
-                        <a class="nav-link" href="pricing.html">Pricing</a>
-                        <a class="nav-link" href="collective.html">The Blooming Collective</a>
-                        <a class="nav-link" href="mindful.html">The Mindful Bloom</a>
+                        <a class="nav-link active" href="about.html">Our Story</a>
+                        <a class="nav-link" href="services.html">Offerings</a>
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                        <a class="nav-link" href="bloom-petals">Bloom Petals</a>
+                        <a class="nav-link" href="collective.html">Blooming Collective</a>
+                        <a class="nav-link" href="mindful.html">Our Blog</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -31,31 +33,38 @@
         <div class="masthead-sub">
             <div class="container">
                 <div class="content">
-                    <h1 class="m-0">Services</h1>
+                    <h1 class="m-0">Offerings</h1>
                 </div>
             </div>
         </div>
     </header>
     <main>
         <section>
-            <div class="grid-col-3">
-                <div class="card p-5 blush-bg">
-                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Welcoming session</h2>
-                    <p><strong>Session length:</strong> 60-75 minutes</p>
-                    <p>Together, we will assess your well-being needs and preferences, and design a unique therapy program, just for you.</p>
-                    <p>We will take our time reviewing consent, confidentiality, and our policies for an informed therapy experience.</p>
+            <div class="card p-5 my-4 mountain-bg text-center">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Free Consultation<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>Feel free to reach out to me with any questions, to see if we’re a good fit!</p><p>Please text or call 951-546-4076, or email me at susan@bloomingtherapyco.com.</p>
+                <p><strong>Cost:</strong> Free, for up to 20 minutes</p>
                 </div>
-                <div class="card p-5 blush-bg">
-                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Blooming sessions</h2>
-                    <p><strong>Session length:</strong> 60-75 minutes</p>
-                    <p>In home, 1:1 sessions, uniquely tailored to your well-being goals.</p>
-                    <p>Our therapists provide structure to sessions, ensuring that you reap the benefits of mindful aging, creative expression, storytelling, and new experiences. You will do the rest!</p>
-
+            <div class="grid-col-2 text-center">
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Welcoming Session<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>In our first session, I will assess your needs, and we will explore your preferences. We will design a unique therapy program for you, which incorporates mindful aging, creative expression, storytelling, and new experiences. We will take our time reviewing consent, confidentiality, and our policies.</p>
+                    <p><strong>Session length:</strong> 60-75 minutes<br><strong>Cost:</strong> $260 per session*</p>
                 </div>
-                <div class="card p-5 blush-bg">
-                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Connection sessions</h2>
-                    <p><strong>Session length:</strong> 20-30 minutes (virtual only)</p>
-                    <p>With your consent, your therapist can connect with the important people in your life (such as family, friends, spiritual mentors, and medical providers) to support you with your well-being goals. </p>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Blooming Sessions<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>In home, confidential therapy sessions.</p>
+                    <p><strong>Session length:</strong> 60-75 minutes<br><strong>Cost:</strong> $260 per session*</p>
+                </div>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Buddy Sessions<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>Do you have a friend that is interested in mindful aging, creative expression, storytelling, and new experiences? Pair up with her throughout your therapy journey, and support each other!</p>
+                    <p><strong>Session length:</strong> 75-90 minutes<br><strong>Cost:</strong> $150 per buddy*</p>
+                </div>
+                <div class="card p-5 dark-bg">
+                    <h2 class="mb-3"><img src="images/Rose.png" class="w-10 me-3">Connection Sessions<img src="images/Rose.png" class="w-10 ms-3"></h2>
+                    <p>With your written consent and verbal agreement, I will connect with the important people in your life. This may include family, friends, spiritual mentors, and medical professionals.</p>
+                    <p><strong>Session length:</strong> 20-30 minutes<br><strong>Cost:</strong> $50 per session, on an as needed basis. </p>
                 </div>
             </div>
         </section>
@@ -66,11 +75,12 @@
             </div>
         </section>
     </main>
+    <p class="text-center mt-5"><small>*An additional $25 mileage fee will be billed with each in home session</small></p>
     <footer>
         <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
-        <p>&copy; 2024 - Blooming Therapy Co.</p>
-        <p>Los Angeles | Orange County | San Bernadino County</p>
-        <p>susan@bloomingtherapyco.com</p>
+        <p>&copy; 2024 - Blooming Therapy Co., LLC</p>
+        <p>San Diego County | Riverside County | LA County | Orange County | San Bernadino County</p>
+        <p>Email me! susan@bloomingtherapyco.com</p>
         <p class="my-5" style="font-size: 0.8em;">Website design by <a href="mailto:dustinkrat@gmail.com">Dustin Kratochwill</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
