--- a/pricing.html
+++ b/pricing.html
@@ -19,11 +19,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                        <a class="nav-link" href="services.html">Services</a>
-                        <a class="nav-link" href="pricing.html">Pricing</a>
-                        <a class="nav-link" href="collective.html">The Blooming Collective</a>
-                        <a class="nav-link" href="mindful.html">The Mindful Bloom</a>
+                        <a class="nav-link active" href="about.html">Our Story</a>
+                        <a class="nav-link" href="services.html">Offerings</a>
+                        <a class="nav-link" href="faq.html">FAQ</a>
+                        <a class="nav-link" href="bloom-petals">Bloom Petals</a>
+                        <a class="nav-link" href="collective.html">Blooming Collective</a>
+                        <a class="nav-link" href="mindful.html">Our Blog</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -91,9 +93,9 @@
     <p class="text-center mt-5"><small>*An additional $25 mileage fee will be billed with each in home session</small></p>
     <footer>
         <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
-        <p>&copy; 2024 - Blooming Therapy Co.</p>
-        <p>Los Angeles | Orange County | San Bernadino County</p>
-        <p>susan@bloomingtherapyco.com</p>
+        <p>&copy; 2024 - Blooming Therapy Co., LLC</p>
+        <p>San Diego County | Riverside County | LA County | Orange County | San Bernadino County</p>
+        <p>Email me! susan@bloomingtherapyco.com</p>
         <p class="my-5" style="font-size: 0.8em;">Website design by <a href="mailto:dustinkrat@gmail.com">Dustin Kratochwill</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
