--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p class="footer-logo m-auto mb-3"><img src="images/Horizontal_web.png"></p>
         <p>&copy; 2024 - Blooming Therapy Co., LLC</p>
         <p>San Diego County | Riverside County | LA County | Orange County | San Bernadino County</p>
-        <p>Email me! susan@bloomingtherapyco.com</p>
+        <p>Reach out! susan@bloomingtherapyco.com</p>
         <p class="my-5" style="font-size: 0.8em;">Website design by <a href="mailto:dustinkrat@gmail.com">Dustin Kratochwill</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
